src/objects/Harm__c.object
<CustomObject>
    <fields>
        <fullName>Hazardous_Situation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hazard Situation</label>
        <referenceTo>Hazard_Situation__c</referenceTo>
        <relationshipLabel>Harms</relationshipLabel>
        <relationshipName>Situations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability_of_harm__c</fullName>
        <label>Probability of Harm</label>
        <picklist>
            <picklistValues>
                <fullName>Almost certain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity_of_Harm__c</fullName>
        <label>Severity of Harm</label>
        <picklist>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Harm</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Harm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>